--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="FILT CGIL"/>
     <meta property="og:description" content="Accordo smart working FSI"/>
-    <meta property="og:image" content="https://www.instagram.com/p/C6KSJyXi8AM/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="/>
+    <meta property="og:image" content="https://www.instagram.com/p/C6KSJyXi8AM/?igsh=angycTRzeGcwMXM1"/>
     <link rel="icon" href="faviconlogo.ico" type="image/x-icon">
     <link rel="shortcut icon" href="faviconlogo.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
